[package]
name = "one-billion-row-challenge"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gen-examples"
path = "src/gen-examples.rs"
required-features = ["random"]

[[bin]]
name = "1brc"
path = "src/1brc.rs"

[dependencies]
memchr = "2.7.4"
memmap2 = "0.9.5"
rayon = "1.10.0"
rustc-hash = "2.1.1"
rand = { version = "0.8.5", optional = true }

[features]
random = ["rand"]

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
pedantic = "warn"
style = "warn"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3